test/integration/bad/err-jacobian-plusequals-scope5.stan

parameters {
  real b_raw;
  real ub;
}

model {
  real b = upper_bound_jacobian(b_raw, ub);
}
